# OS-Lab_1

./: CMakeLists.txt  Lab1.sln  Lab1.vcxproj  Lab1.vcxproj.filters  allocator.c  allocator.h  block.c  block.h  config.h  demo_final.c  kernel.c  kernel.h  main.c  main_test.c  mem_alloc.c  mem_alloc.h  simple_test.c  tree.c  tree.h  Лаб1_Сюсюков_Володимир_ІМ-34.docx
